--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "reactnativeflatlistwrapper",
-  "version": "0.0.1",
-  "private": true,
+  "name": "flatlist-view-control-rn",
+  "version": "1.0.1",
+  "description": "A Flatlist react native full wrapper!",
+  "main": "src/index",
+  "react-native": "src/index",
+  "source": "src/index",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DEVfancybear/react-native-flatlist-wrapper.git"
+  },
+  "peerDependencies": {
     "react": "17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-native": "0.64.0"
@@ -28,18 +31,29 @@
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
-  "resolutions": {
-    "@types/react": "^17"
+  "keywords": [
+    "flatlist",
+    "flatlist",
+    "wrapper",
+    "flatlist",
+    "control",
+    "react-native",
+    "rn",
+    "react",
+    "native",
+    "fresh",
+    "react",
+    "native",
+    "load",
+    "more",
+    "pull",
+    "to",
+    "refresh"
+  ],
+  "author": "DuongLT",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DEVfancybear/react-native-flatlist-wrapper/issues"
   },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+  "homepage": "https://github.com/DEVfancybear/react-native-flatlist-wrapper#readme"
 }
