--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "flatlist-view-control-rn": "^1.0.1",
+    "immer": "^9.0.2",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "use-immer": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
